--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 * {
@@ -13,7 +14,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url("/tree.jpg");
+    background: url("/images/tree.jpg");
     background-size: cover ;
     background-position: center ; 
 }
@@ -113,3 +114,73 @@ textarea::-webkit-scrollbar-thumb{
     opacity: 0.7;
 }
 
+
+  footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #162938;
+    padding: -5px 0;
+  }
+  
+  .middle {
+    text-align: center;
+  }
+  
+  .btn {
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    background: #162938;
+    margin: 10px;
+    border-radius: 30%;
+    box-shadow: 0 5px 15px -5px #00000070;
+    color: #3498db;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .btn i {
+    line-height: 60px;
+    font-size: 26px;
+    transition: 0.2s linear;
+  }
+  
+  .btn:hover i {
+    transform: scale(1.3);
+    color: #f1f1f1;
+  }
+  
+  .btn::before {
+    content: "";
+    position: absolute;
+    width: 120%;
+    height: 120%;
+    background: #3498db;
+    transform: rotate(45deg);
+    left: -110%;
+    top: 90%;
+  }
+  
+  .btn:hover::before {
+    animation: aaa 0.7s 1;
+    top: -10%;
+    left: -10%;
+  }
+  
+  @keyframes aaa {
+    0% {
+      left: -110%;
+      top: 90%;
+    }
+    50% {
+      left: 10%;
+      top: -30%;
+    }
+    100% {
+      top: -10%;
+      left: -10%;
+    }
+  }
+  
