--- a/css/Recipe.css
+++ b/css/Recipe.css
@@ -21,6 +21,7 @@
     text-transform: capitalize;
     transition: all .2s linear;
     transition: width none;
+
 }
 
 html{
@@ -50,7 +51,6 @@ section{
     padding: 5rem 9%;
 
 }
-
 
 .header .header-1{
     background: #fff;
@@ -171,9 +171,9 @@ section{
     
 }
 
-/*image section*/
+/*image section recheck*/
 .home{
-    background: url(1.jfif) no repeat;
+    background: url("/images/1.jpg") no repeat;
     background-size: cover;
     background-position: center;
 }
@@ -200,11 +200,6 @@ section{
 
 .home .row .books-slider a:hover img{
     transform: scale(.9);
-}
-.home .row .books-slider .stand{
-    width: 100%;
-    margin-top: -2rem;
-
 }
 
 .home .row .content h3{
@@ -283,46 +278,10 @@ section{
     padding-bottom: .5rem;
 }
 
-.arrivals .arrivals-slider .box .content .description span{
-    font-size: 1.5rem;
-    color: var(--light-color);
-    text-decoration: none;
-}
-
 .arrivals .arrivals-slider .box .content .stars i{
     font-size: 1.5rem;
     color: var(--green);
 }
-
-
-
-
-
-
-
-     
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
