--- a/css/Recipe.css
+++ b/css/Recipe.css
@@ -173,7 +173,7 @@ section{
 
 /*image section recheck*/
 .home{
-    background: url("/images/1.jpg") no repeat;
+    background: url("../images/1.jpg") no repeat;
     background-size: cover;
     background-position: center;
 }
