--- a/css/about.css
+++ b/css/about.css
@@ -12,7 +12,7 @@
     width: 100%;
     min-height: 100vh;
     background-color:#ddd;
-    background: url('/images/hex.jpg')no-repeat; /*Replace wallpaper from here*/
+    background: url('images/hex.jpg')no-repeat; /*Replace wallpaper from here*/
     background-size: cover;
     background-position: center;
 
