--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url("../images/river.jpg")no-repeat; /*Replace wallpaper from here*/
+    background: url("../images/ramen.png")no-repeat; /*Replace wallpaper from here*/
     background-size: cover;
     background-position: center;
 }
