--- a/css/landing.css
+++ b/css/landing.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 /* Global styles */
-body {
-  font-family: 'Source Sans Pro', sans-serif;
+body{
+    font-family: 'Source Sans Pro', sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
    
-
   }
   
   h1, h2, h3 {
@@ -33,14 +33,14 @@ body {
   
   /* Header */
   header {
-    background-color: #f7f7f7;
+    /*background-color: #f7f7f7;*/
     text-align: center;
     padding: 40px;
   }
   
   /* Featured Recipe section */
   .featured-recipe {
-    background-color: #f1f1f1;
+    /*background-color: #f1f1f1;*/
     text-align: center;
     padding: 40px;
   }
@@ -69,7 +69,7 @@ body {
     width: 300px;
     text-align: center;
     padding: 20px;
-    background-color: #f7f7f7;
+    /*background-color: #f7f7f7;*/
     border-radius: 4px;
   }
   
@@ -139,6 +139,122 @@ body {
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 20px;
+    padding: 5px;
   }
+
+  body .light {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: .2s;
+
+}
+
+header .navigation{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100;
+        padding: 10px 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 99;
+    
+}
+
+
+.toggle {
+    cursor: pointer;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    width: 120px;
+    height: 60px;
+    border-radius: 50px;
+    transition: .2s;
+}
+
+.toggle i {
+    width: 50%;
+    line-height: 60px;
+    text-align: center;
+    font-size: 30px;
+    z-index: 1;
+}
+
+.toggle .ball {
+    position: absolute;
+    width: 45px;
+    height: 45px;
+    margin: 7.5px;
+    border-radius: 50%;
+    transition: .3s ease-out;
+
+}
+
+input {
+    display: none;
+}
+
+/*light mode*/
+
+.light {
+    background: #fafafa;
+    
+}
+
+.light .toggle {
+    background: linear-gradient(145deg, #e1e1e1, #fff);
+    box-shadow: 3px 3px 4px #e6e6e6,
+                -3px -3px 4px #e6e6e6, ;
+
+}
+
+.light .toggle .bxs-sun {
+    color: #fafafa;
+
+}
+
+.light .toggle .bxs-moon {
+    color: #151d2a;
+    
+}
+
+.light .toggle .ball{
+    background: #151d2a; 
+
+}
+
+/*dark mode*/
+.dark {
+    background: #151d2a;
+    
+}
+
+.dark .toggle {
+    background: #151d2a;
+    box-shadow: 3px 3px 4px #0e131b,
+                -3px -3px 4px #1c2739;
+
+}
+
+.dark .toggle .bx-sun {
+    color: #fafafa;
+
+}
+
+.dark .toggle .bxs-moon {
+    color: #151d2a;
+    
+}
+
+.dark .toggle .ball{
+    background: #fafafa;
+    transform: translateX(60px);
+
+
+}
+
   
