--- a/css/landing.css
+++ b/css/landing.css
@@ -33,14 +33,12 @@ body{
   
   /* Header */
   header {
-    /*background-color: #f7f7f7;*/
     text-align: center;
     padding: 40px;
   }
   
   /* Featured Recipe section */
   .featured-recipe {
-    /*background-color: #f1f1f1;*/
     text-align: center;
     padding: 40px;
   }
@@ -69,7 +67,6 @@ body{
     width: 300px;
     text-align: center;
     padding: 20px;
-    /*background-color: #f7f7f7;*/
     border-radius: 4px;
   }
   
@@ -80,7 +77,7 @@ body{
     margin-bottom: 10px;
   }
   
-  /* Testimonial section */
+  /* reviews section */
   .testimonial {
     background-color: #f1f1f1;
     text-align: center;
@@ -194,7 +191,7 @@ header .navigation{
 
 }
 
-input {
+.navigation input {
     display: none;
 }
 
