--- a/css/add.css
+++ b/css/add.css
@@ -4,15 +4,14 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     margin: 0;
     padding: 20px;
-    background: url("../images/dark-food.jpg")no-repeat;
-    background-size: cover;
-    background-position: center;
+    background:#162938;
+
 }
 
   
   h1 {
     text-align: center;
-    color: #162938;
+    color: #fff;
   }
   
   form {
@@ -22,7 +21,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     max-width: 500px;
     margin: 0 auto;
-    background: transparent;
+    background: #164455;
     overflow: hidden;
     backdrop-filter: blur(20px);
   }
@@ -30,7 +29,7 @@ body {
   label {
     display: block;
     margin-bottom: 8px;
-    color:#336699;
+    color:#fff;
   }
   
   input[type="text"],
@@ -40,7 +39,7 @@ body {
     width: 100%;
     padding: 10px;
     border-radius: 5px;
-    border: 1px solid blue;
+    border: 1px solid #fff;
     box-sizing: border-box;
     font-size: 14px;
     margin-bottom: 10px;
@@ -51,8 +50,8 @@ body {
   }
   
   input[type="submit"] {
-    background-color: #162938;
-    color: #fff;
+    background-color: #336699;
+    color:#fff;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
