--- a/css/landing.css
+++ b/css/landing.css
@@ -8,6 +8,49 @@ body{
     box-sizing: border-box;
    
   }
+  .navbar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 50%;
+    padding: 25px 12.5%;
+    background: transparent;
+    display: flex;
+    align-items: center;
+}
+
+.navbar a{
+    position: relative;
+    font-size: 16px;
+    color: #3498db;
+    text-decoration: none;
+    font-weight: 500;
+    margin-right: 30px;
+
+}
+
+.navbar a::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 100%;
+    height: 2px;
+    background:purple;
+    border-radius: 5px;
+    transform: translateY(10px);
+    opacity: 0;
+    transition: .5s;
+
+
+}
+
+.navbar a:hover::after{
+    transform: translateY(0);
+    opacity: 1;
+
+}
+
   
   h1, h2{
     color: #336699;
