--- a/css/page.css
+++ b/css/page.css
@@ -38,8 +38,16 @@ li{
     color:  #166396;
 }
 
-.image {
+/*will adjust to diff-sizes*/
+.image-container {
+    max-width: 100%;
     text-align: center;
+}
+.image-container img{
+    max-width: 50%;
+    max-height: 50%;
+    margin-left: 0;
+
 }
 
 .descriptions {
